restart issue fixed

--- a/games.html
+++ b/games.html
@@ -23,7 +23,7 @@
         </h1> 
         <div id = grid>
             <div class = "wrapper">
-                <div clas = "game-text">
+                <div class = "game-text">
                     <span>Game-Over!!</span>
                 <button>restart
                 </button>
