score calculation changed

--- a/games.html
+++ b/games.html
@@ -23,6 +23,8 @@
         </h1> 
         <div id = grid>
             <div class = "wrapper">
+                <div class = "tetris">Tetris
+                </div>
                 <div class = "game-text">
                     <span>Game-Over!!</span>
                 <button>restart
