--- a/rashi.html
+++ b/rashi.html
@@ -47,8 +47,11 @@
                     <figcaption>Later she got used to living in a new place. We even brought her to a beach.
                     </figcaption>
                 </figure>
-                    <figure class = "gallery__item">
+                <figure class = "gallery__item">
                     <img src="images/rashi/Rashi4.jpeg" class = "photo">
+                    <figcaption>Now she seems to be enjoying travelling around with our family!</figcaption>
+                </figure>
+                <figure class = "gallery__item">
                     <img src="images/rashi/Rashi5.jpeg" class = "photo">   
                     <figcaption>Hope she is enjoying her life as a member of our family 😊
                     </figcaption>
