--- a/games.html
+++ b/games.html
@@ -25,12 +25,13 @@
             <div class = "wrapper">
                 <div class = "tetris">Tetris
                 </div>
-                <div class = "game-text">
-                    <span>Game-Over!!</span>
-                <button>restart
+                <div>
+                    <span class = "game-text">Game-Over!!</span>
+                <button class = "game-button">restart
                 </button>
                 </div>
-                <div class ="score"> 0</div>
+                <div class ="score"> Score: 0</div>
+                <div class ="stage"> Stage: 1</div>
                 <div class = "playground">
                     <ul></ul>
                 </div>
