start button, hard drop speed adjusted

--- a/games.html
+++ b/games.html
@@ -35,6 +35,7 @@
                 <div class = "playground">
                     <ul></ul>
                 </div>
+                <div class ="preview"></div>
             </div>
             <script src = "tetris.js" type = "module">
             </script>
