--- a/games.html
+++ b/games.html
@@ -27,6 +27,8 @@
                 </div>
                 <div>
                     <span class = "game-text">Game-Over!!</span>
+                    <ol class="high-scores">
+                    </ol>
                 <button class = "game-button">restart
                 </button>
                 </div>
