fixed restart error

--- a/rashi.html
+++ b/rashi.html
@@ -51,12 +51,12 @@
                     <img src="images/rashi/Rashi4.jpeg" class = "photo">
                     <figcaption>Now she seems to be enjoying travelling around with our family!</figcaption>
                 </figure>
-                <figure class = "gallery__item">
-                    <img src="images/rashi/Rashi5.jpeg" class = "photo">   
+                <figure class = "gallery__item" style="padding-bottom: 30px;">
+                    <img src="images/rashi/Rashi5.jpeg" class = "photo" >   
                     <figcaption>Hope she is enjoying her life as a member of our family 😊
                     </figcaption>
                 </figure>
-                <div class= "videoWrapper" style="margin-bottom: 30px;"> <iframe class = video src="https://www.youtube.com/embed/HasI05RN6tE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="padding-top: 5%;"></iframe></div>
+                <div class= "videoWrapper"> <iframe class = video src="https://www.youtube.com/embed/HasI05RN6tE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="padding-top: 5%;"></iframe></div>
                 <div class= "videoWrapper"> <iframe class = video src="https://www.youtube.com/embed/eNQgOHjNYZE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="padding-top: 5%;"></iframe></div>
             </div>
         </div>
