--- a/profile.html
+++ b/profile.html
@@ -9,6 +9,8 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <script defer src="./script.js"></script>
+        <link rel="stylesheet" href="assets/css/style.css">
+
     </head>
     <body>
         <h1>My Profile
