fixed tetris bug when stages up

--- a/rashi.html
+++ b/rashi.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="assets/css/style.css">
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <script defer src="./script.js"></script>
+        <script defer src="./modal.js"></script>
         <script async src="https://kit.fontawesome.com/6cc05e1e8e.js" crossorigin="anonymous"></script>
     </head>
     <body>
