added instruction to game

--- a/aboutPage.html
+++ b/aboutPage.html
@@ -13,12 +13,11 @@
             <li><a href="rashi.html"> Rashi</a></li>
             <li><a href="games.html"> Games</a></li>
             <li><a href="algorithm.html"> Algorithm</a></li>
-            <li><a href="aboutPage.html"> about</a></li>
         </dl> 
     </h1> 
     <body>
         <div id = grid>
-            
+            <div>Html, Css, Javascript, JQuery, mySQL</div>
         </div>
     </body>
 </html>
