--- a/photos.html
+++ b/photos.html
@@ -1,25 +1,36 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Photos</title>
-        <meta charset="utf-8">
-        <link href="style.css" rel="stylesheet">
-        <link href='https://fonts.googleapis.com/css?family=Optima' rel='stylesheet'>
 
-    </head>
-    <body>
-        <h1>Photos
-            <img id = "logo" src="images/logo/camera.png" style = "filter: invert();">
-            <dl>
-                <li><a href="profile.html"> Profile</a></li>
-                <li><a id = "selected" href="photos.html"> Photos</a></li>
-                <li><a href="rashi.html"> Rashi</a></li>
-                <li><a href="games.html"> Games</a></li>
-                <li><a href="algorithm.html"> Algorithm</a></li>
-            </dl> 
-        </h1> 
-        <div id = grid>
-            
-        </div>
-    </body>
+<head>
+    <title>Photos</title>
+    <script src="https://code.jquery.com/jquery-3.3.1.js"
+        integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous">
+        </script>
+    <script>
+        $(function () {
+            $("#header").load("header.html")
+            $(".footer-dark").load("footer.html")
+        });
+    </script>
+            <div id="header"></div>
+</head>
+
+<body>
+    <h1>Photos
+        <img id="logo" src="images/logo/camera.png" style="filter: invert();">
+        <dl id="navLinks">
+            <li><a href="profile.html"> Profile</a></li>
+            <li><a id="selected" href="photos.html"> Photos</a></li>
+            <li><a href="rashi.html"> Rashi</a></li>
+            <li><a href="games.html"> Games</a></li>
+            <li><a href="algorithm.html"> Algorithm</a></li>
+        </dl>
+    </h1>
+    <div id=grid>
+
+    </div>
+    <div class="footer-dark">
+    </div>
+</body>
+
 </html>
