--- a/algorithm.html
+++ b/algorithm.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Algorithm</title>
+        <link href="style.css" rel="stylesheet">
         <script defer src="./modal.js"></script>
         <script async src="https://kit.fontawesome.com/6cc05e1e8e.js" crossorigin="anonymous"></script>
         <script src="https://code.jquery.com/jquery-3.3.1.js"
