--- a/rashi.html
+++ b/rashi.html
@@ -42,12 +42,12 @@
                     </figcaption>
                 </figure>
                 <figure class = "gallery__item">
-                    <img src="images/rashi/Rashi2.jpeg" class = "photo" id = "horizontal">
+                    <img src="images/rashi/Rashi2.jpeg" class = "photo">
                     <figcaption>First thing we did for her was to shave off her untrimmed hair. Her thigh looked like a chicken thigh ever since then.
                     </figcaption>
                 </figure>
                 <figure class = "gallery__item">
-                    <img src="images/rashi/Rashi.jpeg" class = "photo" id = "horizontal">
+                    <img src="images/rashi/Rashi.jpeg" class = "photo">
                     <figcaption>Later she got used to living in a new place. We even brought her to a beach.
                     </figcaption>
                 </figure>
@@ -55,13 +55,13 @@
                     <img src="images/rashi/Rashi4.jpeg" class = "photo">
                     <figcaption>Now she seems to be enjoying travelling around with our family!</figcaption>
                 </figure>
-                <figure class = "gallery__item" style="padding-bottom: 30px;">
+                <figure class = "gallery__item">
                     <img src="images/rashi/Rashi5.jpeg" class = "photo" >   
                     <figcaption>Hope she is enjoying her life as a member of our family 😊
                     </figcaption>
                 </figure>
-                <div class= "videoWrapper"> <iframe class = video src="https://www.youtube.com/embed/HasI05RN6tE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="padding-top: 5%;"></iframe></div>
-                <div class= "videoWrapper"> <iframe class = video src="https://www.youtube.com/embed/eNQgOHjNYZE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="padding-top: 5%;"></iframe></div>
+                <div class= "videoWrapper"> <iframe class = video src="https://www.youtube.com/embed/HasI05RN6tE" title="YouTube video player" frameborder="2px" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+                <div class= "videoWrapper"> <iframe class = video src="https://www.youtube.com/embed/eNQgOHjNYZE" title="YouTube video player" frameborder="2px" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
             </div>
         </div>
     </div>
