modulized navBar, made js function to give selected class

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class= "footer-dark"></div>
 </head>
 <h1>Jinsang Oh
-    <dl id = "navLinks">
+    <dl class="navLinks">
         <li><a href="profile.html"> Profile</a></li>
         <li><a href="photos.html"> Photos</a></li>
         <li><a href="rashi.html"> Rashi</a></li>
