--- a/algorithm.html
+++ b/algorithm.html
@@ -1,44 +1,50 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Algorithm</title>
-        <link href="style.css" rel="stylesheet">
-        <script defer src="./modal.js"></script>
-        <script async src="https://kit.fontawesome.com/6cc05e1e8e.js" crossorigin="anonymous"></script>
-        <script src="https://code.jquery.com/jquery-3.3.1.js"
-            integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous">
-            </script>
-        <script>
-            $(function () {
-                $("#header").load("header.html")
-                $(".footer-dark").load("footer.html")
-            });
+
+<head>
+    <title>Algorithm</title>
+    <script src="highlightSelected.js"></script>
+    <link href="style.css" rel="stylesheet">
+    <script defer src="./modal.js"></script>
+    <script async src="https://kit.fontawesome.com/6cc05e1e8e.js" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.js"
+        integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous">
         </script>
-        <div id="header"></div>
-    </head>
-    <body class = main>
-        <h1>Algorithm Studies
-            <dl>
-                <li><a href="profile.html"> Profile</a></li>
-                <li><a href="photos.html"> Photos</a></li>
-                <li><a href="rashi.html"> Rashi</a></li>
-                <li><a href="games.html"> Games</a></li>
-                <li><a id = "selected" href="algorithm.html"> Algorithm </a></li>
-            </dl> 
-        </h1> 
-        <div id = grid>
-            <div id = column>
-                <figure class = "gallery__item"
-                > <img src="images/algorithm/DFS.png" class = "photo">
-                    <figcaption><span>Depth-first search (DFS)</span> is an algorithm for traversing a tree. It starts traversing from the root node and explores as far as possible along each branch before backtracking. Usually uses <span>stack</span> to find the shortest path. In geeral, DFS is faster than BFS.<br><span>Time complexity: </span> O(V+E)</figcaption>
-                    </figure>
-                <figure class = "gallery__item">
-                    <img src="images/algorithm/BFS.png" class = "photo">
-                    <figcaption><span>Breadth-first search (BFS)</span> is an algorithm for searching a tree. It starts traversing from the root node and explores all nodes at the present depth prior to moving on to the nodes at the next depth level. Extra memory, usually a <span>queue</span>, is needed to keep track of the child nodes that were encountered but not yet explored. It is usually a better option when target is closer to source.<br> <span>Time complexity: O(V+E)</span></figcaption>
-                </figure>
-            </div>
+    <script>
+        $(function () {
+            $(".footer-dark").load("footer.html")
+            $(".navLinks").load("navBar.html")
+            $("#header").load("header.html")
+        });
+    </script>
+    <div id="header"></div>
+</head>
+
+<body class=main>
+    <h1>Algorithm Studies
+        <dl class="navLinks">
+        </dl>
+    </h1>
+    <div id=grid>
+        <div id=column>
+            <figure class="gallery__item"> <img src="images/algorithm/DFS.png" class="photo">
+                <figcaption><span>Depth-first search (DFS)</span> is an algorithm for traversing a tree. It starts
+                    traversing from the root node and explores as far as possible along each branch before backtracking.
+                    Usually uses <span>stack</span> to find the shortest path. In geeral, DFS is faster than
+                    BFS.<br><span>Time complexity: </span> O(V+E)</figcaption>
+            </figure>
+            <figure class="gallery__item">
+                <img src="images/algorithm/BFS.png" class="photo">
+                <figcaption><span>Breadth-first search (BFS)</span> is an algorithm for searching a tree. It starts
+                    traversing from the root node and explores all nodes at the present depth prior to moving on to the
+                    nodes at the next depth level. Extra memory, usually a <span>queue</span>, is needed to keep track
+                    of the child nodes that were encountered but not yet explored. It is usually a better option when
+                    target is closer to source.<br> <span>Time complexity: O(V+E)</span></figcaption>
+            </figure>
         </div>
-        <div class="footer-dark">
-        </div>
-    </body>
+    </div>
+    <div class="footer-dark">
+    </div>
+</body>
+
 </html>
