--- a/games.html
+++ b/games.html
@@ -1,30 +1,25 @@
 <!DOCTYPE html>
 <html>
-
 <body>
-
     <head>
         <title>Jinsang Oh</title>
         <link href="style.css" rel="stylesheet">
+        <script src="highlightSelected.js"></script>
         <script src="https://code.jquery.com/jquery-3.3.1.js"
             integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous">
             </script>
         <script>
             $(function () {
-                $("#header").load("header.html")
                 $(".footer-dark").load("footer.html")
+                $(".navLinks").load("navBar.html")
+                $("#header").load("header.html")
             });
         </script>
         <div id="header"></div>
     </head>
     <h1>Games
         <img id="logo" src="images/logo/game.png">
-        <dl>
-            <li><a href="profile.html"> Profile</a></li>
-            <li><a href="photos.html"> Photos</a></li>
-            <li><a href="rashi.html"> Rashi</a></li>
-            <li><a id="selected" href="games.html"> Games</a></li>
-            <li><a href="algorithm.html"> Algorithm</a></li>
+        <dl class="navLinks">
         </dl>
     </h1>
     <div id=grid>
