--- a/profile.html
+++ b/profile.html
@@ -4,27 +4,24 @@
 <head>
     <title>profile</title>
     <link href="style.css" rel="stylesheet">
+    <script src="highlightSelected.js" defer></script>
     <script src="https://code.jquery.com/jquery-3.3.1.js"
         integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous">
         </script>
     <script>
         $(function () {
             $(".footer-dark").load("footer.html")
+            $(".navLinks").load("navBar.html")
             $("#header").load("header.html")
         });
     </script>
-    <div id = header></div>
+    <div id="header"></div>
 </head>
 
 <body>
     <h1>My Profile
         <img id="logo" src="images/logo/profile.jpeg" style="filter: invert();">
-        <dl id = "navLinks">
-            <li><a id="selected" href="profile.html"> Profile</a></li>
-            <li><a href="photos.html"> Photos</a></li>
-            <li><a href="rashi.html"> Rashi</a></li>
-            <li><a href="games.html"> Games</a></li>
-            <li><a href="algorithm.html"> Algorithm</a></li>
+        <dl class="navLinks">
         </dl>
     </h1>
     <div id=profile>
