--- a/rashi.html
+++ b/rashi.html
@@ -1,72 +1,81 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Rashi</title>
-        <link href="style.css" rel="stylesheet">
-        <script defer src="./modal.js"></script>
-        <script async src="https://kit.fontawesome.com/6cc05e1e8e.js" crossorigin="anonymous"></script>
-        <script src="https://code.jquery.com/jquery-3.3.1.js"
+
+<head>
+    <title>Rashi</title>
+    <link href="style.css" rel="stylesheet">
+    <script defer src="./modal.js"></script>
+    <script src="highlightSelected.js"></script>
+    <script async src="https://kit.fontawesome.com/6cc05e1e8e.js" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.js"
         integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous">
         </script>
     <script>
         $(function () {
-            $("#header").load("header.html")
             $(".footer-dark").load("footer.html")
+            $(".navLinks").load("navBar.html")
+            $("#header").load("header.html")
         });
     </script>
-    <div id = "header"></div>
-    </head>
-    <body>
-        <div class = main> 
+    <div id="header"></div>
+</head>
+
+<body>
+    <div class=main>
         <h1>
             Rashi
-            <img id = "logo" src="images/logo/paw.png" style = "filter: invert();">
-            <dl id = navLinks>
-                <li><a href="profile.html"> Profile</a></li>
-                <li><a href="photos.html"> Photos</a></li>
-                <li><a id = "selected" href="rashi.html"> Rashi</a></li>
-                <li><a href="games.html"> Games</a></li>
-                <li><a href="algorithm.html"> Algorithm</a></li>
-            </dl> 
-        </h1> 
-        <div id = grid>
-            <div id = column>
-                <figure class = "gallery__item">
-                    <img src="images/rashi/Rashi1.jpeg" class = "photo" >
-                    <figcaption>Rashi joined our family on January 15th, 2021, from a dog shelter. She has a very careful personality. We are predicting that she was born in around December, 2020.
+            <img id="logo" src="images/logo/paw.png" style="filter: invert();">
+            <dl class="navLinks">
+            </dl>
+        </h1>
+        <div id=grid>
+            <div id=column>
+                <figure class="gallery__item">
+                    <img src="images/rashi/Rashi1.jpeg" class="photo">
+                    <figcaption>Rashi joined our family on January 15th, 2021, from a dog shelter. She has a very
+                        careful personality. We are predicting that she was born in around December, 2020.
                     </figcaption>
                 </figure>
-                <figure class = "gallery__item">
-                    <img src="images/rashi/Rashi3.jpeg" class = "photo">
-                    <figcaption>On the first day she came to our place, it took quite awhile for her to come out of the cage.
+                <figure class="gallery__item">
+                    <img src="images/rashi/Rashi3.jpeg" class="photo">
+                    <figcaption>On the first day she came to our place, it took quite awhile for her to come out of the
+                        cage.
                     </figcaption>
                 </figure>
-                <figure class = "gallery__item">
-                    <img src="images/rashi/Rashi2.jpeg" class = "photo">
-                    <figcaption>First thing we did for her was to shave off her untrimmed hair. Her thigh looked like a chicken thigh ever since then.
+                <figure class="gallery__item">
+                    <img src="images/rashi/Rashi2.jpeg" class="photo">
+                    <figcaption>First thing we did for her was to shave off her untrimmed hair. Her thigh looked like a
+                        chicken thigh ever since then.
                     </figcaption>
                 </figure>
-                <figure class = "gallery__item">
-                    <img src="images/rashi/Rashi.jpeg" class = "photo">
+                <figure class="gallery__item">
+                    <img src="images/rashi/Rashi.jpeg" class="photo">
                     <figcaption>Later she got used to living in a new place. We even brought her to a beach.
                     </figcaption>
                 </figure>
-                <figure class = "gallery__item">
-                    <img src="images/rashi/Rashi4.jpeg" class = "photo">
+                <figure class="gallery__item">
+                    <img src="images/rashi/Rashi4.jpeg" class="photo">
                     <figcaption>Now she seems to be enjoying travelling around with our family!</figcaption>
                 </figure>
-                <figure class = "gallery__item">
-                    <img src="images/rashi/Rashi5.jpeg" class = "photo" >   
+                <figure class="gallery__item">
+                    <img src="images/rashi/Rashi5.jpeg" class="photo">
                     <figcaption>Hope she is enjoying her life as a member of our family 😊
                     </figcaption>
                 </figure>
-                <div class= "videoWrapper"> <iframe class = video src="https://www.youtube.com/embed/HasI05RN6tE" title="YouTube video player" frameborder="2px" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
-                <div class= "videoWrapper"> <iframe class = video src="https://www.youtube.com/embed/eNQgOHjNYZE" title="YouTube video player" frameborder="2px" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+                <div class="videoWrapper"> <iframe class=video src="https://www.youtube.com/embed/HasI05RN6tE"
+                        title="YouTube video player" frameborder="2px"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe></div>
+                <div class="videoWrapper"> <iframe class=video src="https://www.youtube.com/embed/eNQgOHjNYZE"
+                        title="YouTube video player" frameborder="2px"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe></div>
             </div>
         </div>
     </div>
-        <div class="footer-dark">
-        </div>
-        
-    </body>
+    <div class="footer-dark">
+    </div>
+
+</body>
+
 </html>
