removed border used for debugging

--- a/rashi.html
+++ b/rashi.html
@@ -63,11 +63,11 @@
                     </figcaption>
                 </figure>
                 <div class="videoWrapper"> <iframe class=video src="https://www.youtube.com/embed/HasI05RN6tE"
-                        title="YouTube video player" frameborder="2px"
+                        title="YouTube video player" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe></div>
                 <div class="videoWrapper"> <iframe class=video src="https://www.youtube.com/embed/eNQgOHjNYZE"
-                        title="YouTube video player" frameborder="2px"
+                        title="YouTube video player" frameborder=""
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe></div>
             </div>
