--- a/games.html
+++ b/games.html
@@ -34,7 +34,7 @@
                 </button>
             </div>
             <div class="score"> Score: 0</div>
-            <div class="stage"> Stage: 1</div>
+            <div class="info"> <span class="stage"> Stage: 1</span> <span class="next-level">Next Level: 10</span></div>
             <div class="playground">
                 <ul></ul>
             </div>
