preview was made

--- a/games.html
+++ b/games.html
@@ -28,17 +28,18 @@
             </div>
             <div>
                 <span class="game-text">Game-Over!!</span>
-                <ol class="high-scores">
-                </ol>
                 <button class="game-button">restart
                 </button>
             </div>
             <div class="score"> Score: 0</div>
             <div class="info"> <span class="stage"> Stage: 1</span> <span class="next-level">Next Level: 10</span></div>
-            <div class="playground">
+            <div><span class="playground">
                 <ul></ul>
+            </span>
+            <span class = preview>
+                <ul></ul>
+            </span>
             </div>
-            <div class="preview"></div>
         </div>
         <script src="tetris.js" type="module">
         </script>
