--- a/games.html
+++ b/games.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
+
 <body>
+
     <head>
         <title>Jinsang Oh</title>
         <link href="style.css" rel="stylesheet">
@@ -32,13 +34,14 @@
                 </button>
             </div>
             <div class="score"> Score: 0</div>
-            <div class="info"> <span class="stage"> Stage: 1</span> <span class="next-level">Next Level: 10</span></div>
+            <div class="info"> <span class="stage"> Stage: 1</span> <span class="next-level">Next Level: 10</span> <span id = "next">Next Block: </span></div>
             <div><span class="playground">
-                <ul></ul>
-            </span>
-            <span class = preview>
-                <ul></ul>
-            </span>
+                    <ul></ul>
+                </span>
+                <span class=preview>
+                    <ul></ul>
+                </span>
+
             </div>
         </div>
         <script src="tetris.js" type="module">
