--- a/rashi.html
+++ b/rashi.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Rashi</title>
+    <title>Photos</title>
     <link href="style.css" rel="stylesheet">
     <script defer src="./modal.js"></script>
     <script src="highlightSelected.js"></script>
@@ -29,11 +29,11 @@
             </dl>
         </h1>
         <div id=grid>
-            <div id=column>
+            <span id=column>
                 <figure class="gallery__item">
                     <img src="images/rashi/Rashi1.jpeg" class="photo">
                     <figcaption>Rashi joined our family on January 15th, 2021, from a dog shelter. She has a very
-                        careful personality. We are predicting that she was born in around December, 2020.
+                        careful character. Her estimated birthday is December, 2020.
                     </figcaption>
                 </figure>
                 <figure class="gallery__item">
@@ -50,12 +50,12 @@
                 </figure>
                 <figure class="gallery__item">
                     <img src="images/rashi/Rashi.jpeg" class="photo">
-                    <figcaption>Later she got used to living in a new place. We even brought her to a beach.
+                    <figcaption>Later she got used to living in a new place with a new family. She even joins our family trips, including one to the beach.
                     </figcaption>
                 </figure>
                 <figure class="gallery__item">
                     <img src="images/rashi/Rashi4.jpeg" class="photo">
-                    <figcaption>Now she seems to be enjoying travelling around with our family!</figcaption>
+                    <figcaption>She seems to be enjoying travelling around with our family!</figcaption>
                 </figure>
                 <figure class="gallery__item">
                     <img src="images/rashi/Rashi5.jpeg" class="photo">
@@ -70,7 +70,7 @@
                         title="YouTube video player" frameborder=""
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe></div>
-            </div>
+                </span>
         </div>
     </div>
     <div class="footer-dark">
