--- a/scenery.html
+++ b/scenery.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Photos</title>
+    <title>Scenery</title>
     <link href="style.css" rel="stylesheet">
     <script src="highlightSelected.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.js"
@@ -19,8 +19,8 @@
 </head>
 
 <body>
-    <h1>Photos
-        <img id="logo" src="images/logo/camera.png" style="filter: invert();">
+    <h1>Scenery
+        <img id="logo" src="images/logo/scenery.png">
         <dl class="navLinks">
         </dl>
     </h1>
