--- a/navBar.html
+++ b/navBar.html
@@ -1,7 +1,7 @@
 <script scr="highlightSelected"></script>
 <li><a href="profile.html"> Profile</a></li>
 <!-- <li><a href="photos.html"> Photos</a></li> -->
-<li><a href="Photos.html"> Photos</a>
+<li><a href="photos.html"> Photos</a>
     <ul>
         <li><a href="rashi.html">Rashi</a></li>
     </ul>
