changing relative paths

--- a/algorithm.html
+++ b/algorithm.html
@@ -4,7 +4,7 @@
 <head>
     <title>Algorithm</title>
     <script src="highlightSelected.js"></script>
-    <link href="style.css" rel="stylesheet">
+    <link href="/assets/css/style.css" rel="stylesheet">
     <script defer src="./modal.js"></script>
     <script async src="https://kit.fontawesome.com/6cc05e1e8e.js" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.js"
@@ -12,9 +12,9 @@
         </script>
     <script>
         $(function () {
-            $(".footer-dark").load("footer.html")
-            $(".navLinks").load("navBar.html")
-            $("#header").load("header.html")
+            $(".footer-dark").load("/assets/footer.html")
+            $(".navLinks").load("/assets/navBar.html")
+            $("#header").load("/assets/header.html")
         });
     </script>
     <div id="header"></div>
