--- a/applications.html
+++ b/applications.html
@@ -2,9 +2,9 @@
 <html>
 
 <head>
-    <title>profile</title>
+    <title>Applications</title>
     <link href="/assets/css/style.css" rel="stylesheet">
-    <script src="highlightSelected.js" defer></script>
+    <script src="highlightSelected.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.js"
         integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous">
         </script>
@@ -19,20 +19,14 @@
 </head>
 
 <body>
-    <h1>My Profile
-        <img id="logo" src="images/logo/profile.jpeg" style="filter: invert();">
+    <h1>Applications
+        <!-- <img id="logo" src="images/logo/camera.png" style="filter: invert();"> -->
         <dl class="navLinks">
         </dl>
     </h1>
-    <div id=profile>
-        <img src="images/profile/profile.png" alt="profileImg">
-    </div>
     <div id=grid>
-        <div id=column>
-        </div>
     </div>
     <div class="footer-dark">
-
     </div>
 </body>
 
