--- a/assets/navBar.html
+++ b/assets/navBar.html
@@ -9,8 +9,14 @@
         <li><a href="scenery.html">Scenery</a></li>
     </ul>
     </li>
-
-<li><a href="games.html"> Games</a></li>
+<li><a href="applications.html"> Applications</a>
+    <ul>
+    <li><a href="games.html"> Tetris</a></li>
+    </ul>
+    <ul>
+    <li><a href="dogScanner.html"> Dog Scanner</a></li>
+    </ul>
+</li>
 <li><a href="algorithm.html"> Algorithm</a></li>
 
 <script>
