--- a/rashi.html
+++ b/rashi.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Photos</title>
-    <link href="style.css" rel="stylesheet">
+    <link href="/assets/css/style.css" rel="stylesheet">
     <script defer src="./modal.js"></script>
     <script src="highlightSelected.js"></script>
     <script async src="https://kit.fontawesome.com/6cc05e1e8e.js" crossorigin="anonymous"></script>
@@ -12,9 +12,9 @@
         </script>
     <script>
         $(function () {
-            $(".footer-dark").load("footer.html")
-            $(".navLinks").load("navBar.html")
-            $("#header").load("header.html")
+            $(".footer-dark").load("/assets/footer.html")
+            $(".navLinks").load("/assets/navBar.html")
+            $("#header").load("/assets/header.html")
         });
     </script>
     <div id="header"></div>
