--- a/dogScanner.html
+++ b/dogScanner.html
@@ -13,8 +13,8 @@
         <script>
             $(function () {
                 $(".footer-dark").load("/assets/footer.html")
-                $(".navLinks").load("/assets/navBar.html")
-                $("#header").load("/assets/header.html")
+            $(".navLinks").load("/assets/navBar.html")
+            $("#header").load("/assets/header.html")
             });
         </script>
         <div id="header"></div>
@@ -34,8 +34,7 @@
                 </button>
             </div>
             <div class="score"> Score: 0</div>
-            <div class="info"> <span class="stage"> Stage: 1</span> <span class="next-level">Next Level: 10</span> <span
-                    id="next">Next Block: </span></div>
+            <div class="info"> <span class="stage"> Stage: 1</span> <span class="next-level">Next Level: 10</span> <span id = "next">Next Block: </span></div>
             <div><span class="playground">
                     <ul></ul>
                 </span>
