--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link href="style.css" rel="stylesheet">
+    <link href="/assets/css/style.css" rel="stylesheet">
     <script src="highlightSelected.js" defer></script>
     <script src="https://code.jquery.com/jquery-3.3.1.js"
         integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous">
         </script>
     <script>
         $(function () {
-            $(".footer-dark").load("footer.html")
-            $(".navLinks").load("navBar.html")
-            $("#header").load("header.html")
+            $(".footer-dark").load("/assets/footer.html")
+            $(".navLinks").load("/assets/navBar.html")
+            $("#header").load("/assets/header.html")
         });
     </script>
     <div id="header"></div>
