relative path issue

--- a/dogScanner.html
+++ b/dogScanner.html
@@ -20,7 +20,7 @@
         <div id="header"></div>
     </head>
     <h1>Tetris
-        <img id="logo" src="images/logo/game.png">
+        <img id="logo" src="assets/images/logo/game.png">
         <dl class="navLinks">
         </dl>
     </h1>
