--- a/photos.html
+++ b/photos.html
@@ -20,7 +20,7 @@
 
 <body>
     <h1>Photos
-        <img id="logo" src="images/logo/camera.png" style="filter: invert();">
+        <img id="logo" src="assets/images/logo/camera.png" style="filter: invert();">
         <dl class="navLinks">
         </dl>
     </h1>
