--- a/profile.html
+++ b/profile.html
@@ -20,12 +20,12 @@
 
 <body>
     <h1>My Profile
-        <img id="logo" src="images/logo/profile.jpeg" style="filter: invert();">
+        <img id="logo" src="/assets/images/logo/profile.jpeg" style="filter: invert();">
         <dl class="navLinks">
         </dl>
     </h1>
     <div id=profile>
-        <img src="images/profile/profile.png" alt="profileImg">
+        <img src="/assets/images/profile/profile.png" alt="profileImg">
     </div>
     <div id=grid>
         <div id=column>
