--- a/algorithm.html
+++ b/algorithm.html
@@ -27,14 +27,14 @@
     </h1>
     <div id=grid>
         <div id=column>
-            <figure class="gallery__item"> <img src="images/algorithm/DFS.png" class="photo">
+            <figure class="gallery__item"> <img src="/assets/images/algorithm/DFS.png" class="photo">
                 <figcaption><span>Depth-first search (DFS)</span> is an algorithm for traversing a tree. It starts
                     traversing from the root node and explores as far as possible along each branch before backtracking.
                     Usually uses <span>stack</span> to find the shortest path. In geeral, DFS is faster than
                     BFS.<br><span>Time complexity: </span> O(V+E)</figcaption>
             </figure>
             <figure class="gallery__item">
-                <img src="images/algorithm/BFS.png" class="photo">
+                <img src="/assets/images/algorithm/BFS.png" class="photo">
                 <figcaption><span>Breadth-first search (BFS)</span> is an algorithm for searching a tree. It starts
                     traversing from the root node and explores all nodes at the present depth prior to moving on to the
                     nodes at the next depth level. Extra memory, usually a <span>queue</span>, is needed to keep track
