--- a/scenery.html
+++ b/scenery.html
@@ -20,7 +20,7 @@
 
 <body>
     <h1>Scenery
-        <img id="logo" src="images/logo/scenery.png">
+        <img id="logo" src="/assets/images/logo/scenery.png">
         <dl class="navLinks">
         </dl>
     </h1>
