--- a/applications.html
+++ b/applications.html
@@ -3,16 +3,16 @@
 
 <head>
     <title>Applications</title>
-    <link href="/assets/css/style.css" rel="stylesheet">
+    <link href="assets/css/style.css" rel="stylesheet">
     <script src="highlightSelected.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.js"
         integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous">
         </script>
     <script>
         $(function () {
-            $(".footer-dark").load("/assets/footer.html")
-            $(".navLinks").load("/assets/navBar.html")
-            $("#header").load("/assets/header.html")
+            $(".footer-dark").load("assets/footer.html")
+            $(".navLinks").load("assets/navBar.html")
+            $("#header").load("assets/header.html")
         });
     </script>
     <div id="header"></div>
