--- a/profile.html
+++ b/profile.html
@@ -3,16 +3,16 @@
 
 <head>
     <title>profile</title>
-    <link href="/assets/css/style.css" rel="stylesheet">
+    <link href="assets/css/style.css" rel="stylesheet">
     <script src="highlightSelected.js" defer></script>
     <script src="https://code.jquery.com/jquery-3.3.1.js"
         integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous">
         </script>
     <script>
         $(function () {
-            $(".footer-dark").load("/assets/footer.html")
-            $(".navLinks").load("/assets/navBar.html")
-            $("#header").load("/assets/header.html")
+            $(".footer-dark").load("assets/footer.html")
+            $(".navLinks").load("assets/navBar.html")
+            $("#header").load("assets/header.html")
         });
     </script>
     <div id="header"></div>
@@ -20,12 +20,12 @@
 
 <body>
     <h1>My Profile
-        <img id="logo" src="/assets/images/logo/profile.jpeg" style="filter: invert();">
+        <img id="logo" src="assets/images/logo/profile.jpeg" style="filter: invert();">
         <dl class="navLinks">
         </dl>
     </h1>
     <div id=profile>
-        <img src="/assets/images/profile/profile.png" alt="profileImg">
+        <img src="assets/images/profile/profile.png" alt="profileImg">
     </div>
     <div id=grid>
         <div id=column>
