--- a/rashi.html
+++ b/rashi.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Photos</title>
-    <link href="/assets/css/style.css" rel="stylesheet">
+    <link href="assets/css/style.css" rel="stylesheet">
     <script defer src="./modal.js"></script>
     <script src="highlightSelected.js"></script>
     <script async src="https://kit.fontawesome.com/6cc05e1e8e.js" crossorigin="anonymous"></script>
@@ -12,9 +12,9 @@
         </script>
     <script>
         $(function () {
-            $(".footer-dark").load("/assets/footer.html")
-            $(".navLinks").load("/assets/navBar.html")
-            $("#header").load("/assets/header.html")
+            $(".footer-dark").load("assets/footer.html")
+            $(".navLinks").load("assets/navBar.html")
+            $("#header").load("assets/header.html")
         });
     </script>
     <div id="header"></div>
@@ -24,41 +24,41 @@
     <div class=main>
         <h1>
             Rashi
-            <img id="logo" src="/assets/images/logo/paw.png" style="filter: invert();">
+            <img id="logo" src="assets/images/logo/paw.png" style="filter: invert();">
             <dl class="navLinks">
             </dl>
         </h1>
         <div id=grid>
             <span id=column>
                 <figure class="gallery__item">
-                    <img src="/assets/images/rashi/Rashi1.jpeg" class="photo">
+                    <img src="assets/images/rashi/Rashi1.jpeg" class="photo">
                     <figcaption>Rashi joined our family on January 15th, 2021, from a dog shelter. She has a very
                         careful character. Her estimated birthday is December, 2020.
                     </figcaption>
                 </figure>
                 <figure class="gallery__item">
-                    <img src="/assets/images/rashi/Rashi3.jpeg" class="photo">
+                    <img src="assets/images/rashi/Rashi3.jpeg" class="photo">
                     <figcaption>On the first day she came to our place, it took quite awhile for her to come out of the
                         cage.
                     </figcaption>
                 </figure>
                 <figure class="gallery__item">
-                    <img src="/assets/images/rashi/Rashi2.jpeg" class="photo">
+                    <img src="assets/images/rashi/Rashi2.jpeg" class="photo">
                     <figcaption>First thing we did for her was to shave off her untrimmed hair. Her thigh looked like a
                         chicken thigh ever since then.
                     </figcaption>
                 </figure>
                 <figure class="gallery__item">
-                    <img src="/assets/images/rashi/Rashi.jpeg" class="photo">
+                    <img src="assets/images/rashi/Rashi.jpeg" class="photo">
                     <figcaption>Later she got used to living in a new place with a new family. She even joins our family trips, including one to the beach.
                     </figcaption>
                 </figure>
                 <figure class="gallery__item">
-                    <img src="/assets/images/rashi/Rashi4.jpeg" class="photo">
+                    <img src="assets/images/rashi/Rashi4.jpeg" class="photo">
                     <figcaption>She seems to be enjoying travelling around with our family!</figcaption>
                 </figure>
                 <figure class="gallery__item">
-                    <img src="/assets/images/rashi/Rashi5.jpeg" class="photo">
+                    <img src="assets/images/rashi/Rashi5.jpeg" class="photo">
                     <figcaption>Hope she is enjoying her life as a member of our family 😊
                     </figcaption>
                 </figure>
