dog scanner beta

--- a/games.html
+++ b/games.html
@@ -4,7 +4,7 @@
 <body>
 
     <head>
-        <title>Jinsang Oh</title>
+        <title>Tetris</title>
         <link href="assets/css/style.css" rel="stylesheet">
         <script src="highlightSelected.js"></script>
         <script src="https://code.jquery.com/jquery-3.3.1.js"
