--- a/rashi.html
+++ b/rashi.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Photos</title>
+    <title>Rashi</title>
     <link href="assets/css/style.css" rel="stylesheet">
     <script defer src="./modal.js"></script>
     <script src="highlightSelected.js"></script>
