--- a/dogScanner.html
+++ b/dogScanner.html
@@ -4,7 +4,7 @@
 <body>
 
     <head>
-        <title>Jinsang Oh</title>
+        <title>Dog Scanner</title>
         <link href="assets/css/style.css" rel="stylesheet">
         <script src="highlightSelected.js"></script>
         <script src="https://code.jquery.com/jquery-3.3.1.js"
@@ -13,38 +13,76 @@
         <script>
             $(function () {
                 $(".footer-dark").load("assets/footer.html")
-            $(".navLinks").load("assets/navBar.html")
-            $("#header").load("assets/header.html")
+                $(".navLinks").load("assets/navBar.html")
+                $("#header").load("assets/header.html")
             });
         </script>
         <div id="header"></div>
     </head>
-    <h1>Tetris
-        <img id="logo" src="assets/images/logo/game.png">
+    <h1>Dog Scanner
+        <img id="logo" src="assets/images/logo/paw.png">
         <dl class="navLinks">
         </dl>
     </h1>
     <div id=grid>
-        <div class="wrapper">
-            <div class="tetris">Tetris
-            </div>
-            <div>
-                <span class="game-text">Game-Over!!</span>
-                <button class="game-button">restart
-                </button>
-            </div>
-            <div class="score"> Score: 0</div>
-            <div class="info"> <span class="stage"> Stage: 1</span> <span class="next-level">Next Level: 10</span> <span id = "next">Next Block: </span></div>
-            <div><span class="playground">
-                    <ul></ul>
-                </span>
-                <span class=preview>
-                    <ul></ul>
-                </span>
+        <button type="button" onclick="init(this)" style="margin-top: 3rem; font-size: larger;">Scan My Dog</button>
+        <div id="webcam-container"></div>
+        <div id="label-container"></div>
+        <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.3.1/dist/tf.min.js"></script>
+        <script
+            src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@0.8/dist/teachablemachine-image.min.js"></script>
+        <script type="text/javascript">
+            // More API functions here:
+            // https://github.com/googlecreativelab/teachablemachine-community/tree/master/libraries/image
 
-            </div>
-        </div>
-        <script src="tetris.js" type="module">
+            // the link to your model provided by Teachable Machine export panel
+            const URL = "my_model/";
+
+            let model, webcam, labelContainer, maxPredictions;
+
+            // Load the image model and setup the webcam
+            async function init(x) {
+                const modelURL = URL + "model.json";
+                const metadataURL = URL + "metadata.json";
+                x.style.display = 'none';
+                // load the model and metadata
+                // Refer to tmImage.loadFromFiles() in the API to support files from a file picker
+                // or files from your local hard drive
+                // Note: the pose library adds "tmImage" object to your window (window.tmImage)
+                model = await tmImage.load(modelURL, metadataURL);
+                maxPredictions = model.getTotalClasses();
+
+                // Convenience function to setup a webcam
+                const flip = true; // whether to flip the webcam
+                webcam = new tmImage.Webcam(200, 200, flip); // width, height, flip
+                await webcam.setup(); // request access to the webcam
+                await webcam.play();
+                window.requestAnimationFrame(loop);
+
+                // append elements to the DOM
+                document.getElementById("webcam-container").appendChild(webcam.canvas);
+                labelContainer = document.getElementById("label-container");
+                for (let i = 0; i < maxPredictions; i++) { // and class labels
+                    labelContainer.appendChild(document.createElement("div"));
+                }
+            }
+
+            async function loop() {
+                webcam.update(); // update the webcam frame
+                await predict();
+                window.requestAnimationFrame(loop);
+            }
+
+            // run the webcam image through the image model
+            async function predict() {
+                // predict can take in an image, video or canvas html element
+                const prediction = await model.predict(webcam.canvas);
+                for (let i = 0; i < maxPredictions; i++) {
+                    const classPrediction =
+                        prediction[i].className + ": " + prediction[i].probability.toFixed(2);
+                    labelContainer.childNodes[i].innerHTML = classPrediction;
+                }
+            }
         </script>
     </div>
     <div class="footer-dark">
