--- a/profile.html
+++ b/profile.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>profile</title>
+    <title>My Profile</title>
     <link href="assets/css/style.css" rel="stylesheet">
     <script src="highlightSelected.js" defer></script>
     <script src="https://code.jquery.com/jquery-3.3.1.js"
