--- a/dogScanner.html
+++ b/dogScanner.html
@@ -7,6 +7,7 @@
         <title>Dog Scanner</title>
         <link href="assets/css/style.css" rel="stylesheet">
         <script src="highlightSelected.js"></script>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <script src="https://code.jquery.com/jquery-3.3.1.js"
             integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous">
             </script>
@@ -26,6 +27,7 @@
     </h1>
     <div id=grid>
         <button type="button" onclick="init(this)" style="margin-top: 10rem; font-size: 30px; border-radius: 10%; background-color: cornsilk;">Scan My Dog</button>
+        
         <div id="webcam-container"></div>
         <div id="label-container"></div>
         <h2 id = "dog-breed"></h3>
