--- a/dogScanner.html
+++ b/dogScanner.html
@@ -21,7 +21,7 @@
         <div id="header"></div>
     </head>
     <h1>Dog Scanner
-        <img id="logo" src="assets/images/logo/paw.png">
+        <img id="logo" src="assets/images/logo/magnifying_glass.png" style="filter:invert()">
         <dl class="navLinks">
         </dl>
     </h1>
