--- a/algorithm.html
+++ b/algorithm.html
@@ -3,9 +3,9 @@
 
 <head>
     <title>Algorithm</title>
-    <script src="highlightSelected.js"></script>
+    <script src="assets/js/highlightSelected.js"></script>
     <link href="assets/css/style.css" rel="stylesheet">
-    <script defer src="./modal.js"></script>
+    <script defer src="assets/js/modal.js"></script>
     <script async src="https://kit.fontawesome.com/6cc05e1e8e.js" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.js"
         integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous">
