--- a/games.html
+++ b/games.html
@@ -6,7 +6,7 @@
     <head>
         <title>Tetris</title>
         <link href="assets/css/style.css" rel="stylesheet">
-        <script src="highlightSelected.js"></script>
+        <script src="assets/js/highlightSelected.js"></script>
         <script src="https://code.jquery.com/jquery-3.3.1.js"
             integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous">
             </script>
