--- a/profile.html
+++ b/profile.html
@@ -4,7 +4,7 @@
 <head>
     <title>My Profile</title>
     <link href="assets/css/style.css" rel="stylesheet">
-    <script src="highlightSelected.js" defer></script>
+    <script src="assets/js/highlightSelected.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.js"
         integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous">
         </script>
