fixed minor bug

--- a/dogScanner.html
+++ b/dogScanner.html
@@ -88,7 +88,7 @@
                             wc.muted = "true"
                             wc.id = "webcamVideo";
                         await webcam.play();
-                        //loading.style.display = 'none';
+                        loading.style.display = 'none';
                         window.requestAnimationFrame(loop);
                         
 
