changed design of tetris

--- a/games.html
+++ b/games.html
@@ -6,10 +6,14 @@
     <head>
         <title>Tetris</title>
         <link href="assets/css/style.css" rel="stylesheet">
-        <script src="assets/js/highlightSelected.js"></script>
+        <!--Pixel font -->
+        <link href="http://fonts.cdnfonts.com/css/karma-2" rel="stylesheet">        <script src="assets/js/highlightSelected.js"></script>
         <script src="https://code.jquery.com/jquery-3.3.1.js"
             integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous">
             </script>
+        <style>
+            @import url('http://fonts.cdnfonts.com/css/karma-2');
+        </style>
         <script>
             $(function () {
                 $(".footer-dark").load("assets/footer.html")
