fixed font issue

--- a/games.html
+++ b/games.html
@@ -6,6 +6,7 @@
     <head>
         <title>Tetris</title>
         <link href="assets/css/style.css" rel="stylesheet">
+        <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
         <!--Pixel font -->
         <link href="http://fonts.cdnfonts.com/css/karma-2" rel="stylesheet">        <script src="assets/js/highlightSelected.js"></script>
         <script src="https://code.jquery.com/jquery-3.3.1.js"
