--- a/games.html
+++ b/games.html
@@ -24,7 +24,7 @@
         </script>
         <div id="header"></div>
     </head>
-    <h1>Tetris
+    <h1 style="font-family: karma;">Tetris
         <img id="logo" src="assets/images/logo/game.png">
         <dl class="navLinks">
         </dl>
