--- a/assets/navBar.html
+++ b/assets/navBar.html
@@ -6,7 +6,7 @@
         <li><a href="rashi.html">Rashi</a></li>
     </ul>
     <ul>
-        <li><a href="scenery.html">Scenery</a></li>
+        <li><a href="timeline.html">Timeline</a></li>
     </ul>
     </li>
 <li><a href="applications.html"> Applications</a>
