--- a/photos.html
+++ b/photos.html
@@ -5,6 +5,7 @@
     <title>Photos</title>
     <link href="assets/css/style.css" rel="stylesheet">
     <script src="assets/js/highlightSelected.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://code.jquery.com/jquery-3.3.1.js"
         integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous">
         </script>
@@ -25,6 +26,10 @@
         </dl>
     </h1>
     <div id=grid>
+        <div id = "half_column">
+            <ul class = linkWrapper><div class = link_name><a href="rashi.html"><img class = "photo_links" src="assets/images/rashi/Rashi2.jpeg"></a>Rashi</div></ul>
+            <ul class = "linkWrapper"><div class = link_name><a href="timeline.html"><img class = "photo_links" src="assets/images/timeline/jeju2.jpeg"></a>Photo Timeline</div></ul>
+        </div>
     </div>
     <div class="footer-dark">
     </div>
